male/female profile pic, car number in profile page

--- a/FMI_Parking_System/frontend/account/account_view.html
+++ b/FMI_Parking_System/frontend/account/account_view.html
@@ -89,7 +89,7 @@
           <div class="user-info">
             <!-- User picture -->
             <div id="user-picture">
-              <img src="images/Profil_photo.png" alt="user-picture">
+              <img src="./images/male_photo.png" alt="user-picture">
             </div>
 
             <!-- User data -->
@@ -97,6 +97,7 @@
             <p id="lastname"><strong>Фамилия: </strong></p>
             <p id="email"><strong>Имейл: </strong></p>
             <p id="user-type"><strong>Тип потребител: </strong></p>
+            <p id="car_number"><strong>Номер на кола: </strong></p>
           </div>
 
           <!-- Schedule part -->
