--- a/FMI_Parking_System/frontend/login/login_form.html
+++ b/FMI_Parking_System/frontend/login/login_form.html
@@ -51,6 +51,12 @@
         <!-- last name -->
         <input type="text" placeholder="Фамилия" autocomplete="off" required name="lastname" id="lastname">
 
+        <!-- user sex -->
+        <select name="sex" id="sex" class="custom-select">
+          <option value="M">Мъж</option>
+          <option value="F">Жена</option>
+        </select>
+
         <!-- car number -->
         <input type="text" placeholder="Номер на кола" autocomplete="off" required name="car_number" id="car_number">
 
@@ -67,7 +73,6 @@
         <select name="user_type" id="user-type" class="custom-select">
           <option value="Щатен преподавател">Щатен преподавател</option>
           <option value="Хоноруван преподавател">Хоноруван преподавател</option>
-          <!-- Да се махне <option value="Студент">Студент</option> -->
         </select>
 
         <!-- submit button -->
