response-message in register named response-message-register

--- a/FMI_Parking_System/frontend/login/login_form.html
+++ b/FMI_Parking_System/frontend/login/login_form.html
@@ -79,7 +79,7 @@
         <button type="submit" id="register-button" onclick="register()">Регистриране</button>
 
         <!-- response when a field was incorrect -->
-        <div class="form-item no-show" id="response-message">
+        <div class="form-item no-show" id="response-message-register">
         </div>
       </form>
     </div>
